# bread-log

./: .gitignore  .pre-commit-config.yaml  Bread_Timing_TDD_Tests.md  CLAUDE.md  README.md  Recipe_Creation_Design.md  Recipe_Creation_TDD_Tests.md  Recipe_Update_Design.md  Recipe_Update_TDD_Tests.md  launch.json  main.py  package-lock.json  package.json  pyproject.toml  test_integration_demo.py
Bread App/: Create Dough Make.bru  Delete make.bru  Get make.bru  Update make.bru  bruno.json
backend/: __init__.py  db.py  exceptions.py  launch.json  models.py  recipe_service.py  recipe_versioning.py  requirements.txt  scratch.http  service.py
database/: account_makes.sql  account_makes_initial_seed.sql  add_timing_status_column.sql  bread_timings.sql  daily_make_num.sql  data_bread_makes.sql  dough_make.sql  dough_makes.sql  migrate_dough_makes_to_bread_timings.sql  migrate_to_versioned_recipes.sql  migrate_version_number.sql  recipe_versions.sql  recipes.sql
docs/: claude-session-guide.md  database-notes.md  recipe-system.md  research-and-tdd-requirements.md
src/: App.js  BreadApp.tsx  BreadAppNew.tsx  index.css  index.js
src/bread_log.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/components/: AddMakeModal.tsx  CreateTab.tsx  DatePicker.js  DoughMake.js  DoughMakePage.js  Link.js  (+11 more)
tests/: conftest.py  test_baker_percentages.py  test_ingredient_matching.py  test_integration.py  test_recipe_creation_api.py  test_recipe_creation_service.py  test_recipe_creation_transactions.py  test_recipe_list_api.py  test_recipe_versioning.py  test_timing_api.py
(+10 files in other folders)
