[project]
name = "bread-log"
version = "0.1.0"
description = "Bread App to track bread make times and recipes."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "pre-commit>=4.3.0",
    "psycopg>=3.2.13",
    "psycopg-pool>=3.2.8",
    "pydantic>=2.12.5",
    "pytest>=8.4.2",
    "ruff>=0.15.9",
    "uvicorn>=0.39.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
indent-width = 2

[tool.ruff.format]
indent-style = "space"
